hard code the screenshot url

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<meta property="og:image" content="%sveltekit.assets%/screenshot.jpg" />
+		<meta property="og:image" content="https://jfalcon.igloo.net/screenshot.jpg" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Zen+Dots&family=Share+Tech+Mono&family=Assistant:wght@400&display=swap"
 			rel="stylesheet"
