move meta tags to html

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<meta name="description" content="Original music from Jeff Falcon" />
+		<meta property="og:title" content='j.Falcon | "Untitled"' />
+		<meta property="og:description" content="Original music from Jeff Falcon" />
+		<meta property="og:type" content="website" />
 		<meta property="og:image" content="https://jfalcon.igloo.net/screenshot.jpg" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Zen+Dots&family=Share+Tech+Mono&family=Assistant:wght@400&display=swap"
