fix album title

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<meta name="description" content="Original music from Jeff Falcon" />
-		<meta property="og:title" content='j.Falcon | "Untitled"' />
+		<meta property="og:title" content='j.Falcon | "Undefined"' />
 		<meta property="og:description" content="Original music from Jeff Falcon" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="https://jfalcon.igloo.net/screenshot.jpg" />
